	- fix: ftpAbort must close the data channel to read abort status.
	- perform glob on remote ftp install args.
	- fix: reload macros from cmd line when re-reading config files.
	- fix: compressFileList was over-generating dirNames.
	- fix: alAddPackage sorted dirNames too soon, destroying dirMapping.
	- expose enough of legacy fdio interface to compile gnorpm.

3.0.2 -> 3.0.3
	- add --eval to find result of macro expansion.
	- add configure scaffolding to support rpm-4.0 packages.
	- include shared libs in rpm-devel (no versioning yet).
	- add epoch (as [0-9]*:version-release) to install dependency parse.
	- move install/erase major modes into rpmlib.
	- move checksig/resign major modes into rpmlib.
	- add python bindings to rpm-devel (linux only).
	- make query (rpm -qvl) behave like (POSIX?) ls for older files (#4050).
	- fix: %if parsing skipped 3 chars too many.
	- permit multiline macro expansions with comments and %if.
	- add pl translation and man pages (PLD team - from Tomasz Kloczko).
	- fix: incomplete cleanup if --rebuilddb fails (#4115).
	- add versions to provides.
	- fix: sanity test on specfile fails when encountering i18n chars.
	- print all dependencies for each package at end of build.
	- the death of RPMSENSE_SERIAL, use [epoch:]version[-release] instead.
	- add _mandir/_infodir macro expansions to docdirs (Tomasz Kloczko).
	- add post install configurable dependency checking.
	- fix: segfault on --rebuild (#4185).
	- macro fixes (Benedict Lofstedt, #4220):
	   expand %# just like %{#} (and with same value as shell analogues).
	   macro defaults for *, 0, and # if no args specified.
	   getopt on non-linux requires optind to be saved/restored.
	- fix: don't remove file until last occurence in transaction (#4291).
	- resuscitate net shared paths (#4330).
	- fix: macro table cannot contain NULL pointers (#4263).
	- fix: last char in rpmrc w/o terminating newline lost (#4361).
	- prepare for handling \r in macro exapnsions.